re #22 Configure PMD and FindBugs globally for whole project. Fix problems found by these tools. re #31 Make Metadata API entities Serializable.